add higher priority for @ParseWith